<resources>
    <string name="app_name">JYSDK</string>

    <string name="bind">绑定服务</string>
    <string name="unbind">解绑服务</string>
    <string name="scan">扫描</string>
    <string name="connect">连接</string>
    <string name="disconnect">断连</string>
    <string name="send_call_notificatioin">发送提醒</string>
    <string name="sync_time">获取当前运动数据</string>
    <string name="set_time">设置设备时间</string>
    <string name="set_parameters">设置设备参数</string>
    <string name="set_userinfo">设置个人信息</string>
    <string name="set_vir">手环振动</string>
    <string name="set_photo">拍照模式</string>
    <string name="set_idletime">久坐提醒时间</string>
    <string name="set_sleep">设置睡眠时间段</string>
    <string name="read_batery">读取设备电量</string>
    <string name="read_deviceinfo">读取手环信息</string>
    <string name="set_alarm">设置闹钟</string>
    <string name="send_msg">固件升级</string>
    <string name="openheart">开启测试心率</string>
    <string name="closeheart">关闭测试心率</string>
    <string name="set_autoheart">自动测试心率</string>
    <string name="set_fuzhu">特殊模式</string>
    <string name="set_showmode">设置显示模式</string>
    <string name="getdata">获取历史数据</string>
    <string name="set_device_code">设置机器串码</string>
    <string name="get_device_code">获取机器串码</string>

    <string name="set_heart_range">设置心率区间</string>
    <string name="get_band_function">获取手环功能</string>
    <string name="set_uuid">切换默认处理</string>
</resources>
